fix: resolve legacy migration drift in analyze, mobile actions, scroll, and lucky picker
Remove the non-legacy "matching draws" (הגרלות תואמות) feature from the
Analyze RPC across proto, Go service, Java BFF, and Angular UI — it was
not part of the original Statistiloto behavior and produced excessive
response sizes. Replace it with grouped frequency data (1–6) with ratio
titles, expand/collapse, save, recursion, and pagination.

Then fix four drifts found by comparing the old Ionic/Java stack against
the new Angular 20/Go stack:

1. Strong number in Analyze: the old Java server dropped the last form
   element (form.length-1) before analysis. Add the same defensive drop
   in the Go service when len(form) > 6.

2. Mobile swipe-to-reveal: NumberSetListComponent had toggleSlide() and
   CSS for swipe actions but the method was never called from the
   template. Wire touchstart/touchend handlers so horizontal swipes
   reveal action buttons on mobile.

3. Infinite scroll loading indicator: the old Ionic infinite scroll
   showed a spinner + "טוען נתונים נוספים..." text. Add a loadingMore
   signal with CSS spinner and translated text to the
   IntersectionObserver-based scroll.

4. Lucky number picker UX: replace the checkbox + native <select>
   dropdown with a card-based picker showing each lucky set as visual
   mini number balls, plus a "ללא מספרי מזל" (no lucky numbers) card,
   matching the old ActionSheet pattern.

Also wire the analyze button on Generate, Lucky, and Statistics pages
to open the analyze modal, and fix the tab selection so clicking a
frequency tab auto-expands its content.

Test coverage: 18 Go tests, 20 Angular unit tests, 40 Playwright E2E
tests — all passing.

Generated with [Devin](https://devin.ai)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>